# readmegenie

./: .env.example  README.md  pyproject.toml
output/: project_files.md  project_files_overview.md  report.md
src/readmegenie/: README.md  crew.py  main.py
src/readmegenie/config/: agents.yaml  tasks.yaml
src/readmegenie/tools/: custom_tool.py
